# zorbox-mvp

./: WARP.md  ZORBOX_MVP_PLAYBOOK.md  latest.md  pitch.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: compose-e2e.yml  node-ci.yml  python-ci-reporter.yml  python-ci-ti.yml  python-ci.yml
ansible/: playbook.yml
cape-api/: README.md
cape-api/app/: main.py
cuckoo-api/: Dockerfile  README.md
cuckoo-api/app/: main.py
frontend-ui/: README.md  index.html  package.json
frontend-ui/src/: App.css  App.jsx  App.test.jsx  main.jsx
infra/: README.md  docker-compose.yml  smoke.ps1  smoke.sh
infra/monitoring/: README.md  alerts.yml  prometheus.yml
orchestrator/: Dockerfile  README.md  pyproject.toml
orchestrator/ansible/: README.md
orchestrator/app/: archive.py  main.py  schemas.py  state.py  storage.py
reporter-service/: Dockerfile  README.md  pyproject.toml
reporter-service/ansible/: README.md
reporter-service/app/: main.py  pdf.py
static-analyzer/: Dockerfile  pyproject.toml
static-analyzer/app/: main.py
static-analyzer/app/rules/: apt_samples.yar  malware_basics.yar
ti-enrichment/: Dockerfile  README.md  pyproject.toml
ti-enrichment/ansible/: README.md
ti-enrichment/app/: main.py
